--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 *.la
 *.lo
 *.o
+*.a
+*.so
+*.so.*
 .deps
 .dirstamp
 .libs
+.project
+.cproject
 /aclocal.m4
 /autom4te.cache
 /bin*
@@ -28,6 +33,13 @@
 INSTALL
 Makefile
 Makefile.in
+CMakeCache.txt
+CMakeFiles/
+CTestTestfile.cmake
+CMakeTestCInline.c
+cmake_install.cmake
+docs/Doxyfile
+docs/html
 examples/amqp_bind
 examples/amqp_connect_timeout
 examples/amqp_consumer
@@ -47,14 +59,18 @@ examples/amqps_listenq
 examples/amqps_producer
 examples/amqps_sendstring
 examples/amqps_unbind
+librabbitmq/config.h
 librabbitmq.pc
 test-driver
 tests/*.log
 tests/*.trs
+tests/tests/
 tests/test_hostcheck
 tests/test_parse_url
 tests/test_status_enum
 tests/test_tables
+tests/test_merge_capabilities
+tests/test_sasl_mechanism
 tools/amqp-consume
 tools/amqp-declare-queue
 tools/amqp-delete-queue
